--- a/ImGuiSnake.vcxproj
+++ b/ImGuiSnake.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Field2.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_dx11.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_sdl3.cpp" />
@@ -139,11 +140,15 @@
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SnakeGame.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Config.h" />
+    <ClInclude Include="App.h" />
+    <ClInclude Include="Colors.h" />
+    <ClInclude Include="Direction.h" />
     <ClInclude Include="Field2.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="imgui\backends\imgui_impl_dx11.h" />
     <ClInclude Include="imgui\backends\imgui_impl_sdl3.h" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -152,6 +157,8 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="SnakeGame.h" />
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
